@@ -128,7 +128,7 @@
   <!-- Captioned image properties -->
   <property name="image2_alignClasses" type="lines">
    <element value="image-left"/>
-   <element value=""/>
+   <element value="image-dummy"/>
    <element value="image-right"/>
   </property>
   <property name="image2_captionedClass" type="string">image</property>
